load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

buildifier(
    name = "buildifier",
)

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "github.com",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "project",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["hello_test.go"],
    embed = [":go_default_library"],
)
