load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

buildifier(
    name = "buildifier",
)

# gazelle:prefix github.com/beamcodeup/bazel
gazelle(name = "gazelle")

go_library(
    name = "foo",
    srcs = ["foo.go"],
    importpath = "github.com/beamcodeup/bazel",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "foobin",
    embed = [":foo"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "foo_test",
    srcs = ["foo_test.go"],
    embed = [":go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["foo_test.go"],
    embed = [":go_default_library"],
)
